--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -265,6 +265,7 @@
           <div class="content-left">
             <h4 class="area">China</h4>
             <h3>206 B.C. - A.D. 9 西汉</h3>
+            <p>汉武帝时，把儒教定为国教</p>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -351,7 +352,7 @@
             <p>神医华佗</p>
             <p>许慎《说文解字》</p>
             <p>《九章算术》</p>
-            <p>东汉末年，道教成为一个宗教</p>
+            <p>东汉末年，道教起源于太平道和五斗米道，成为一个宗教</p>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
