--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -130,23 +130,15 @@
           <span class="date">1000</span>
           <span class="month">BC</span>
         </div>
-      </div>
-      <!-- // Article -->
 
-      <!-- Article -->
-      <div class="timeline-article">
         <div class="content-right-container">
-          <div class="century">776 BC</div>
+          <div class="century">1000 BC</div>
           <div class="content-right">
-            <h4 class="area">Europe</h4>
-            <h3>776 B.C. 雅典举办第一次奥林匹克运动会</h3>
+            <h4 class="area">Asia</h4>
+            <h3>1000 B.C. - A.D. 250 日本弥生时代</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
-        </div>
-        <div class="meta-date">
-          <span class="date">760</span>
-          <span class="month">BC</span>
         </div>
       </div>
       <!-- // Article -->
@@ -167,7 +159,7 @@
           <span class="month">BC</span>
         </div>
       </div>
-      <!-- // Article -->
+      <!-- // Article -->    
 
       <!-- Article -->
       <div class="timeline-article">
@@ -176,6 +168,20 @@
           <div class="content-left">
             <h4 class="area">China</h4>
             <h3>770 B.C. - 476/403 B.C. 春秋时期</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">776 BC</div>
+          <div class="content-right">
+            <h4 class="area">Europe</h4>
+            <h3>776 B.C. 雅典举办第一次奥林匹克运动会</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -348,10 +354,10 @@
           <div class="content-left">
             <h4 class="area">China</h4>
             <h3>A.D. 25 - 220 东汉</h3>
+            <p>东汉初年，《九章算术》</p>
             <p>东汉末年，张仲景，《伤寒杂病论》</p>
             <p>神医华佗</p>
             <p>许慎《说文解字》</p>
-            <p>《九章算术》</p>
             <p>东汉末年，道教起源于太平道和五斗米道，成为一个宗教</p>
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
@@ -432,6 +438,23 @@
 
       <!-- Article -->
       <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">250 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 250 - 592 日本古坟时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+        <div class="meta-date">
+          <span class="date">250</span>
+          <span class="month">AD</span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
         <div class="content-left-container">
           <div class="century">265 AD</div>
           <div class="content-left">
@@ -481,9 +504,9 @@
 
       <!-- Article -->
       <div class="timeline-article">
-        <div class="content-left-container">
+        <div class="content-right-container">
           <div class="century">380 AD</div>
-          <div class="content-left">
+          <div class="content-right">
             <h4 class="area">Europe</h4>
             <h3>A.D. 380 基督教确立为罗马帝国国教</h3>
           </div>
@@ -560,6 +583,19 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
+          <div class="century">592 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 592 - 710 日本飞鸟时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
           <div class="century">600 AD</div>
           <div class="content-right">
             <h4 class="area">Asia</h4>
@@ -588,6 +624,32 @@
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
 
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">710 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 710 - 794 日本奈良时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">794 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 794 - 1185 日本平安时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
       </div>
       <!-- // Article -->
 
@@ -721,6 +783,18 @@
       </div>
       <!-- // Article -->
 
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1068 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1068 - 1185 日本院政时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
 
       <!-- Article -->
       <div class="timeline-article">
@@ -839,6 +913,18 @@
       </div>
       <!-- // Article -->
 
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1185 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1185 - 1333 日本镰仓时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
 
       <!-- Article -->
       <div class="timeline-article">
@@ -916,6 +1002,32 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
+          <div class="century">1336 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1336 - 1392 日本南北朝时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1336 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1336 - 1573 日本室町时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
           <div class="century">1346 AD</div>
           <div class="content-right">
             <h4 class="area">Europe</h4>
@@ -968,9 +1080,21 @@
           </div>
         </div>
 
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1467 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1467 - 1590 日本战国时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
 
         <div class="content-right-container">
-          <div class="century">1500 AD</div>
+          <div class="century">1400 AD</div>
           <div class="content-right">
             <h4 class="area">Europe</h4>
             <h3>14C - 17C 文艺复兴</h3>
@@ -1072,6 +1196,31 @@
       </div>
       <!-- // Article -->
 
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1573 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1573 - 1603 日本织丰政权</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1603 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1603 - 1868 日本江户时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
 
       <!-- Article -->
       <div class="timeline-article">
@@ -1154,6 +1303,19 @@
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E7%BE%8E%E5%9B%BD%E7%8B%AC%E7%AB%8B%E6%88%98%E4%BA%89%2F%E7%BE%8E%E5%9B%BD%E9%9D%A9%E5%91%BD:%E7%BE%8E%E5%9B%BD%E7%8B%AC%E7%AB%8B%E6%88%98%E4%BA%89%2F%E7%BE%8E%E5%9B%BD%E9%9D%A9%E5%91%BD">Read more</a></span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1776 AD</div>
+          <div class="content-right">
+            <h4 class="area">North America</h4>
+            <h3>A.D. 1776 美国宣布独立</h3>
+          </div>
         </div>
       </div>
       <!-- // Article -->
@@ -1242,6 +1404,19 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
+          <div class="century">1868 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1868 - 1912 日本明治时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
           <div class="century">1870 AD</div>
           <div class="content-right">
             <h4 class="area">Europe</h4>
@@ -1264,6 +1439,19 @@
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1912 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1912 - 1926 日本大正时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
 
         <div class="content-right-container">
           <div class="century">1914 AD</div>
@@ -1301,7 +1489,19 @@
 
       <!-- Article -->
       <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1926 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1926 - 1989 日本昭和时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
 
+      <!-- Article -->
+      <div class="timeline-article">
         <div class="content-right-container">
           <div class="century">1929 AD</div>
           <div class="content-right">
@@ -1374,6 +1574,32 @@
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%88%87%E5%B0%94%E8%AF%BA%E8%B4%9D%E5%88%A9%E4%BA%8B%E6%95%85%20Chernobyl%20nuclear%20disaster%20%2F%20Chernobyl%20disaster:%5B%5B%E5%88%87%E5%B0%94%E8%AF%BA%E8%B4%9D%E5%88%A9%E4%BA%8B%E6%95%85%20Chernobyl%20nuclear%20disaster%20%2F%20Chernobyl%20disaster%5D%5D">Read more</a></span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1989 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1989 - 2019 日本平成时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">2019 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 2019 - recent 日本令和时代</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
         </div>
       </div>
       <!-- // Article -->
