--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -929,6 +929,21 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-left-container">
+          <div class="century">1206 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1206 - 1368 蒙古帝国</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+          <div class="meta-date">
+            <span class="date">1200</span>
+            <span class="month">AD</span>
+          </div>
+        </div>
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
           <div class="century">1266 AD</div>
           <div class="content-left">
             <h4 class="area">Europe</h4>
@@ -950,17 +965,6 @@
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
 
-      <!-- Article -->
-      <div class="timeline-article">
-        <div class="content-left-container">
-          <div class="century">1279 AD</div>
-          <div class="content-left">
-            <h4 class="area">China</h4>
-            <h3>A.D. 1279 - 1368 元</h3>
-          </div>
-          <!-- <span class="timeline-author">John Doe</span> -->
-        </div>
-
         <div class="content-right-container">
           <div class="century">1299 AD</div>
           <div class="content-right">
@@ -970,11 +974,6 @@
           <span class="timeline-author">
             <i class="material-symbols-outlined">travel_explore</i>
             <a href="https://www.bakumatata.com/notes/aHistoryofmoderneurope/8kuNoteBook_aHistoryOfModernEurope.html#%E5%A5%A5%E6%96%AF%E6%9B%BC%E5%B8%9D%E5%9B%BD%20Ottoman%20Empire:%5B%5B%E5%A5%A5%E6%96%AF%E6%9B%BC%E5%B8%9D%E5%9B%BD%20Ottoman%20Empire%5D%5D">Read more</a></span>
-        </div>
-
-        <div class="meta-date">
-          <span class="date">1200</span>
-          <span class="month">AD</span>
         </div>
       </div>
       <!-- // Article -->
