--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -1402,6 +1402,31 @@
 
       <!-- Article -->
       <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1856 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1856 - 1860 第二次鸦片战争</h3>
+          </div>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1853 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1853/1858 日本明治维新</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
         <div class="content-right-container">
           <div class="century">1868 AD</div>
           <div class="content-right">
