--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -1513,6 +1513,17 @@
 
       <!-- Article -->
       <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1921 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1921.7.23 中国共产党成立</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>      
+
+      <!-- Article -->
+      <div class="timeline-article">
         <div class="content-right-container">
           <div class="century">1926 AD</div>
           <div class="content-right">
@@ -1523,6 +1534,17 @@
         </div>
       </div>
       <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1927 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1927-1937 国共第一次内战</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>        
 
       <!-- Article -->
       <div class="timeline-article">
@@ -1556,6 +1578,41 @@
         </div>
       </div>
       <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1941 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1941.12.7 日本偷袭珍珠港</h3>
+          </div>
+          </div>
+      </div>
+      <!-- // Article -->    
+       
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1945 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 1945.8.6, 1945.8.9 美国在广岛与长崎投下原子弹</h3>
+          </div>
+          </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="century">1945 AD</div>
+          <div class="content-left">
+            <h4 class="area">China</h4>
+            <h3>A.D. 1945-1950 国共第二次内战</h3>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>       
 
       <!-- Article -->
       <div class="timeline-article">
