--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
             <div>
                 <h2>文学和表演</h2>
                 <ul>
+                    <li><a href="HarryPotter/HP.html">Harry Potter</a></li>
                     <li>
                         <a href="el_amoren_los_tiempos_del_colera/index.html">霍乱时期的爱情</a>
                     </li>
