--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -66,6 +66,24 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
+          <div class="century">3300 BC</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>3300 B.C. - 2100 B.C. 发现了最早的文字</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. </p> -->
+          </div>
+          <!-- <span class="timeline-author">Africa</span> -->
+        </div>
+        <div class="meta-date">
+          <span class="date">3300</span>
+          <span class="month">BC</span>
+        </div>
+      </div>
+      <!-- // Article --> 
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
           <div class="century">2685 BC</div>
           <div class="content-right">
             <h4 class="area">Africa</h4>
