--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -57,11 +57,84 @@
 
 </div>
 
+
   <!-- Vertical Timeline -->
   <section id="conference-timeline">
     <div class="timeline-start">Start</div>
     <div class="conference-center-line"></div>
     <div class="conference-timeline-content">
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">3.3 Mya</div>
+          <div class="content-right">
+            <h4 class="area">Global</h4>
+            <h3>3.3 Mya - 11,650 BP (before the present period) 旧石器时代 Palaeolithic</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. </p> -->
+          </div>
+          <!-- <span class="timeline-author">Africa</span> -->
+        </div>
+        <div class="meta-date">
+          <span class="date">3.3</span>
+          <span class="month">Mya</span>
+        </div>
+      </div>
+      <!-- // Article --> 
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">10,000 BP</div>
+          <div class="content-right">
+            <h4 class="area">Global</h4>
+            <h3>10,000 BP - 10,200 BC 中石器时代 Mesolithic</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. </p> -->
+          </div>
+          <!-- <span class="timeline-author">Africa</span> -->
+        </div>
+        <div class="meta-date">
+          <span class="date">10,000</span>
+          <span class="month">BP</span>
+        </div>
+      </div>
+      <!-- // Article --> 
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">10,200 BC</div>
+          <div class="content-right">
+            <h4 class="area">Global</h4>
+            <h3>10,200 BC - 4,500～2,000 BC 新石器时代 Neolithic</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. </p> -->
+          </div>
+          <!-- <span class="timeline-author">Africa</span> -->
+        </div>
+        <div class="meta-date">
+          <span class="date">10,200</span>
+          <span class="month">BC</span>
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">3300 BC</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>3300 B.C. - 1200 B.C. 青铜时代 Bronze Age</h3>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. </p> -->
+          </div>
+          <!-- <span class="timeline-author">Africa</span> -->
+        </div>
+        <div class="meta-date">
+          <span class="date">3300</span>
+          <span class="month">BC</span>
+        </div>
+      </div>
+      <!-- // Article --> 
 
       <!-- Article -->
       <div class="timeline-article">
@@ -73,10 +146,6 @@
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. </p> -->
           </div>
           <!-- <span class="timeline-author">Africa</span> -->
-        </div>
-        <div class="meta-date">
-          <span class="date">3300</span>
-          <span class="month">BC</span>
         </div>
       </div>
       <!-- // Article --> 
@@ -126,6 +195,20 @@
             <h4 class="area">China</h4>
             <h3>1700 B.C. - 1027 B.C. 商</h3>
             <p>殷商末期，汉字开始被使用</p>
+            <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
+          <div class="century">1200 BC</div>
+          <div class="content-right">
+            <h4 class="area">Global</h4>
+            <h3>1200 B.C. - c.500 B.C. 铁器时代 Iron Age</h3>
             <!-- <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p> -->
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
