--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h2>心理学</h2>
                 <ul>
                     <li>
-                        <a href="Psychology/Psychology.html">心理学与生活</a>
+                        <a href="Psychology/Psychology.html">心理学</a>
                     </li>
                     <li>
                         <a href="AbnormalPsychology/index.html">变态心理学</a>
