--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@200..900&display=swap" rel="stylesheet">
 
     <!-- icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -23,7 +24,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <style type="text/css">
         body {
-            font-family: "Source Han Serif", "Noto Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+            font-family: "Source Han Serif", "Noto Serif", "Noto Serif SC", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
             color: #373737;
         }
 
@@ -42,11 +43,18 @@
             width: 50%;
         }
 
+        .form-group {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+        }
+
         .form-control {
             display: flex;
             width: 40em;
             height: 3em;
-            margin: 0 1em;
+            margin: 0 0 0 1em;
         }
 
         #count {
@@ -111,9 +119,13 @@
 
             .form-control {
                 display: flex;
-                width: 100%;
+                width: 30em;
                 height: 3em;
-                margin: 0 1em;
+            }
+
+            p#count {
+                margin-left: 0.2em;
+                font-size: smaller;
             }
 
         }
@@ -121,22 +133,22 @@
         @media (min-width: 600px) {
             .head {
                 display: flex;
+                flex-direction: row;
                 align-items: center;
-                flex-direction: column;
+                padding: 0.5em 1em;
             }
 
             .counts {
                 display: flex;
-                justify-content: center;
+                justify-content: flex-end;
                 align-items: center;
                 width: 100%;
             }
 
             .form-control {
                 display: flex;
-                width: 200%;
+                width: 30em;
                 height: 3em;
-                margin: 0 1em;
             }
 
 
@@ -146,6 +158,27 @@
         }
 
         @media (min-width: 900px) {
+            .head {
+                display: flex;
+                justify-content: space-between;
+                flex-direction: row;
+                align-items: center;
+                padding: 0.5em 1em;
+            }
+
+            .counts {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                width: 50%;
+            }
+
+            .form-control {
+                display: flex;
+                width: 40em;
+                height: 3em;
+            }
+
             .con {
                 grid-template-columns: repeat(3, 1fr);
             }
@@ -169,9 +202,8 @@
 
             .form-control {
                 display: flex;
-                width: 40em;
+                /* width: 40em; */
                 height: 3em;
-                margin: 0 1em;
             }
         }
     </style>
