new notes about Korean

--- a/index.html
+++ b/index.html
@@ -655,6 +655,7 @@
                         <a href="knowledgeofcoffee/index.html">精品咖啡学 Knowledge of Coffee</a>
                     </li>
                     <li><a href="Language/English.html">English</a></li>
+                    <li><a href="Language/Korean.html">Korean</a></li>
                 </ol>
             </div>
 
