hide theme switch button

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             .theme-switch {
                 background-color: transparent;
                 border: none;
+                display: none; /* Hide by default */
             }
 
             .theme-switch i {
