--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
         <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png" />
+        <link rel="icon" type="image/svg+xml" href="assets/icon/favicon.svg" />
+
         <link rel="manifest" href="/site.webmanifest" />
         <link rel="stylesheet" href="assets/style.css" />
     </head>
