--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -756,6 +756,21 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-right-container">
+          <div class="century">645 AD</div>
+          <div class="content-right">
+            <h4 class="area">Asia</h4>
+            <h3>A.D. 645 日本大化改新</h3>
+            <p>645年日本大和王权实行的一系列社会政治改革。其主要内容是废除当时豪族专政的制度，并效法中国唐朝体制成立中央集权国家，对日后日本历史发展影响深远。</p>
+          </div>
+          <!-- <span class="timeline-author">John Doe</span> -->
+        </div>
+
+      </div>
+      <!-- // Article -->
+
+      <!-- Article -->
+      <div class="timeline-article">
+        <div class="content-right-container">
           <div class="century">710 AD</div>
           <div class="content-right">
             <h4 class="area">Asia</h4>
