update styles of search box

--- a/HistoryTimeline/history_timeline.html
+++ b/HistoryTimeline/history_timeline.html
@@ -778,6 +778,11 @@
           </div>
           <!-- <span class="timeline-author">John Doe</span> -->
         </div>
+        <div class="meta-date">
+          <span class="date">700</span>
+          <span class="month">AD</span>
+        </div>
+
       </div>
       <!-- // Article -->
 
