--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <body>
         <div class="head">
-            <h3>Notebooks 8ku</h3>
+            <h3><a href="https://github.com/8ku/notes" target="_blank">Notebooks 8ku</a></h3>
 
             <div class="counts">
                 <button class="theme-switch" onclick="toggleTheme()" id="themeBtn">
@@ -239,7 +239,7 @@
                     </li>
                     <li><a href="influence/index.html">影响力 Influence</a></li>
                     <li><a href="scarcity/index.html">稀缺 Scarcity</a></li>
-                    <li><a href="TooBigToKnow/index.html">知识的边界 Too Big To Know</a></li>
+                    <li><a href="toobigtoknow/index.html">知识的边界 Too Big To Know</a></li>
                     <li>
                         <a href="themillionairenextdoor/index.html">邻家的百万富翁 The Millionaire Next Door</a>
                     </li>
